--- a/project1.html
+++ b/project1.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <h1>Project 1</h1>
-        <p>Detailed information about Project 1</p>
+        <p>Detailed information about Project </p>
     </header>
     <nav>
         <a href="index.html">Home</a>
