--- a/index.html
+++ b/index.html
@@ -8,63 +8,67 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>Hi, I'm Muhammad Ikram Ramadhana Friyan – A Passionate Web Developer and UI/UX</p>
+        <div class="header-content">
+            <h1>Welcome to My Portfolio</h1>
+            <p>A Passionate Web Developer and UI/UX</p>
+        </div>
     </header>
     <nav>
         <a href="#about">About Me</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
     </nav>
-    <section id="about">
-        <h2>About Me</h2>
-        <div class="about-content">
-            <img src="ikram.jpg" alt="Muhammad Ikram Ramadhana Friyan" class="profile-photo">
-            <p>Hello! My name is Muhammad Ikram Ramadhana Friyan, and I specialize in Web Developer and UI/UX. I have a passion for creating UI/UX Design and Prototype figma, websites, applications. When I'm not working, I enjoy watching movies and football.</p>
-        </div>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <img src="project1.png" alt="Project 1 Image" class="project-image">
-            <h3>Project 1</h3>
-            <p>Membuat Project Aplikasi Pemantauan Air EcoStream Dengan Prototype Figma</p>
-            <a href="project1.html" target="_blank">View Project</a>
-        </div>
-        <div class="project">
-            <img src="project2.png" alt="Project 2 Image" class="project-image">
-            <h3>Project 2</h3>
-            <p>Membuat Project Online Shopping with Java dengan CLI</p>
-            <a href="project2.html" target="_blank">View Project</a>
-        </div>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <div class="contact-icons">
-            <div class="contact-item">
-                <img src="gmail.jpg" alt="Email Icon" class="contact-icon">
-                <span>ikramramadhana.mirf@gmail.com</span>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <div class="about-content">
+                <img src="ikram.jpg" alt="Muhammad Ikram Ramadhana Friyan" class="profile-photo">
+                <p>
+                    Hello! My name is Muhammad Ikram Ramadhana Friyan, and I specialize in Web Development and UI/UX. 
+                    I have a passion for creating UI/UX designs, prototypes, websites, and applications. When I'm not working, I enjoy watching movies and football.
+                </p>
             </div>
-            <div class="contact-item">
-                <img src="phone.jpg" alt="Phone Icon" class="contact-icon">
-                <span>+62 821 6771 5788</span>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="projects-grid">
+                <div class="project">
+                    <img src="project1.png" alt="Project 1" class="project-image">
+                    <h3>EcoStream Monitoring App</h3>
+                    <p>Designed and prototyped using Figma for water monitoring applications.</p>
+                    <a href="project1.html" class="btn">View Project</a>
+                </div>
+                <div class="project">
+                    <img src="project2.png" alt="Project 2" class="project-image">
+                    <h3>Online Shopping App</h3>
+                    <p>Developed a Java CLI-based shopping application.</p>
+                    <a href="project2.html" class="btn">View Project</a>
+                </div>
             </div>
-            <div class="contact-item">
-                <img src="instagram.jpg" alt="Instagram Icon" class="contact-icon">
-                <span><a href="https://www.instagram.com/ikramramadhanaa/">ikramramadhanaa</a></span>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <div class="contact-grid">
+                <div class="contact-item">
+                    <img src="gmail.jpg" alt="Email">
+                    <span>ikramramadhana.mirf@gmail</span>
+                </div>
+                <div class="contact-item">
+                    <img src="phone.jpg" alt="Phone">
+                    <span>+62 821 6771 5788</span>
+                </div>
+                <div class="contact-item">
+                    <img src="instagram.jpg" alt="Instagram">
+                    <a href="https://www.instagram.com/ikramramadhanaa/">@ikramramadhanaa</a>
+                </div>
+                <div class="contact-item">
+                    <img src="linkedIn.jpg" alt="LinkedIn">
+                    <a href="https://www.linkedin.com/in/muhammad-ikram-ramadhana-friyan-08bb80302/" target="_blank">LinkedIn Profile</a>
+                </div>
             </div>
-            <div class="contact-item">
-                <img src="linkedIn.jpg" alt="LinkedIn Icon" class="contact-icon">
-                <span><a href="https://www.linkedin.com/in/muhammad-ikram-ramadhana-friyan-08bb80302/" target="_blank">Muhammad Ikram Ramadhana Friyan</a></span>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
     <footer>
-        <style>
-            footer {
-                text-align: center;
-            }
-        </style>
         <p>© 2024 Muhammad Ikram Ramadhana Friyan. All rights reserved.</p>
     </footer>
 </body>
