second update project1.html

--- a/project1.html
+++ b/project1.html
@@ -100,7 +100,7 @@
 
         /* Footer */
         footer {
-            background-color: #483D8B;
+            background-color: #65617d;
             color: white;
             text-align: center;
             padding: 1rem;
@@ -129,11 +129,7 @@
         <h2>Overview</h2>
         <p>EcoStream adalah platform inovatif yang dirancang untuk mengoptimalkan pengelolaan air secara berkelanjutan
             guna mendukung SDG 6.4, yaitu efisiensi penggunaan air lintas sektor. Dengan mengintegrasikan teknologi
-            seperti IoT, blockchain, dan analitik data, EcoStream memungkinkan pemantauan konsumsi air secara
-            real-time, deteksi kebocoran, dan rekomendasi penghematan yang dapat diakses langsung oleh pengguna.
-            Platform ini juga mendorong kolaborasi antara pemerintah, masyarakat, dan sektor swasta untuk mengatasi
-            tantangan keterbatasan sumber daya air, sekaligus meningkatkan kesadaran akan pentingnya efisiensi dan
-            keberlanjutan dalam pengelolaan air.</p>
+            seperti IoT, blockchain, dan analitik data.</p>
     </section>
     <section id="features">
         <h2>Features</h2>
