second update project2.html

--- a/project2.html
+++ b/project2.html
@@ -100,7 +100,7 @@
 
         /* Footer */
         footer {
-            background-color: #483D8B;
+            background-color: #65617d;
             color: white;
             text-align: center;
             padding: 1rem;
@@ -136,7 +136,7 @@
     </nav>
     <section id="overview">
         <h2>Overview</h2>
-        <p>Sistem perbelanjaan online berbasis CLI (Command Line Interface) ini dirancang untuk menyediakan pengalaman belanja digital yang sederhana, efisien, dan terstruktur. Dibangun menggunakan bahasa pemrograman Java, sistem ini memungkinkan pengguna untuk berinteraksi melalui antarmuka berbasis teks dengan dua jenis akses utama yaitu sebagai Admin dan Pelanggan. Sistem ini memenuhi berbagai kebutuhan dasar belanja daring, mulai dari pengelolaan barang oleh admin hingga proses transaksi oleh pelanggan, dengan alur kerja yang jelas dan mudah dipahami.</p>
+        <p>Sistem perbelanjaan online berbasis CLI (Command Line Interface) ini dirancang untuk menyediakan pengalaman belanja digital yang sederhana, efisien, dan terstruktur. Dibangun menggunakan bahasa pemrograman Java, sistem ini memungkinkan pengguna untuk berinteraksi melalui antarmuka berbasis teks dengan dua jenis akses utama yaitu sebagai Admin dan Pelanggan.</p>
     </section>
     <section id="features">
         <h2>Features</h2>
