third update project1.html

--- a/project1.html
+++ b/project1.html
@@ -116,7 +116,7 @@
 
 <body>
     <header>
-        <h1>Project 1: EcoStream</h1>
+        <h1>EcoStream</h1>
         <p>Innovative Water Management Platform</p>
     </header>
     <nav>
