third update project2.html

--- a/project2.html
+++ b/project2.html
@@ -125,7 +125,7 @@
 
 <body>
     <header>
-        <h1>Project 2: Online Shopping System</h1>
+        <h1>Online Shopping System</h1>
         <p>Simple and Efficient Shopping Platform</p>
     </header>
     <nav>
